--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "sass": "^1.62.1"
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@types/react-transition-group": "^4.4.6",
+    "sass": "^1.62.1",
+    "typescript": "^5.1.3"
   }
 }
